[package]
name = "PrometheusPeriodicCommands"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
prometheus-client = "0.22.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
duration-string = { version = "0.3.0", features = ["serde"] }
shellexpand = "3.0"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "5.0.0"
tokio = "1.42.0"
