[package]
name = "PrometheusPeriodicCommands"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/JannesStroehlein/PrometheusPeriodicCommands"

[dependencies]
actix-web = "4"
prometheus-client = "0.22.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
duration-string = { version = "0.4.0", features = ["serde"] }
shellexpand = "3.0"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = "5.0.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "process"] }
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
